--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <main>
             
             <section class="hero">
-
+                <h1>Hero Change </h1>
             </section>
 
             <section class="endorsements">
